Fix spacing errors in code

--- a/_patterns/sections/sections.css
+++ b/_patterns/sections/sections.css
@@ -9,3 +9,7 @@
 .align-right {
   text-align: right;
 }
+
+.padding-left {
+  padding-left: 20px;
+}
